force-app/main/default/objects/Rent__c/Rent__c.object-meta.xml
<CustomObject>
    <label>Rent</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Rent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>