force-app/main/default/objects/Rent__c/fields/LocationDate__c.field-meta.xml
<CustomField>
    <fullName>LocationDate__c</fullName>
    <label>Location Date</label>
    <type>Date</type>
</CustomField>