force-app/main/default/objects/Rent__c/fields/LocationFinished__c.field-meta.xml
<CustomField>
    <fullName>LocationFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Finished</label>
    <type>Checkbox</type>
</CustomField>