force-app/main/default/objects/Rent__c/fields/LocationStatus__c.field-meta.xml
<CustomField>
    <fullName>LocationStatus__c</fullName>
    <formula>IF(
     LocationFinished__c ,
      &apos;Finished&apos;,
    if(
       (TODAY() - CloseDate__c) &gt; 0, 
       &apos;Late&apos;,
       &apos;In Progress&apos;
      )

  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Status</label>
    <type>Text</type>
</CustomField>