force-app/main/default/objects/Rent__c/validationRules/Date_Vaidate.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Vaidate</fullName>
    <active>false</active>
    <description>Close Date can not be earlier than today</description>
    <errorConditionFormula>OR(

     CloseDate__c &lt; TODAY(),
     CloseDate__c &lt;  LocationDate__c 

  )</errorConditionFormula>
    <errorMessage>Close Date can not be earlier than Today or Location Date</errorMessage>
</ValidationRule>