force-app/main/default/objects/Rent__c/validationRules/DefaultingContact.validationRule-meta.xml
<ValidationRule>
    <fullName>DefaultingContact</fullName>
    <active>false</active>
    <description>Defaulting contact can not rent any Inventory Item</description>
    <errorConditionFormula>AND(

    ISNEW(),
    ISPICKVAL( Contact__r.ContactStatus__c , &apos;Defaulting&apos;)

)</errorConditionFormula>
    <errorMessage>Defaulting Contact can not rent any Inventory Item</errorMessage>
</ValidationRule>