force-app/main/default/objects/Rent__c/validationRules/Rented_Itens.validationRule-meta.xml
<ValidationRule>
    <fullName>Rented_Itens</fullName>
    <active>false</active>
    <description>Rented Inventory Items can not be rent</description>
    <errorConditionFormula>AND(

    ISNEW(),
    ISPICKVAL( Inventory_Item__r.Status__c , &apos;Rented&apos;)

)</errorConditionFormula>
    <errorMessage>This Item is already rented. Chose another one, please!</errorMessage>
</ValidationRule>