force-app/main/default/objects/Rent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LocationStatus__c</columns>
    <columns>Contact__c</columns>
    <columns>Inventory_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>